fix small layout issue

--- a/styles.scss
+++ b/styles.scss
@@ -59,6 +59,7 @@ body{
 
 .wrapper{
 	width: 100%;
+	overflow: hidden;
 	.logo{
 		padding: 20px;
 		text-align: center;
